# repo-health-doctor

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
repo_doctor/: __init__.py  __main__.py  checks.py  cli.py  fixers.py  report.py  scoring.py
tests/: __init__.py  test_checks.py  test_cli.py  test_scoring.py
